# pyrepo-cookiecutter

./: README.md  cookiecutter.json  pyproject.toml
.github/: dependabot.yml
hooks/: post_gen_project.sh
{{cookiecutter.directory_name}}/: .gitignore  pyproject.toml
{{cookiecutter.directory_name}}/notebooks/: README.md
{{cookiecutter.directory_name}}/testproj/: pyproject.toml
{{cookiecutter.directory_name}}/tests/: test_pyrepo_template.py
