[tool.poetry]
name = "pyrepo-template"
version = "0.1.0"
description = "Cookiecutter template for generic python project."
authors = ["charraig"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
tomlkit = "^0.5.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry_core>=1.1.11"]
build-backend = "poetry.core.masonry.api"
