[tool.poetry]
name = "pyrepo-template"
version = "0.2.0"
description = "Cookiecutter template for generic python project."
authors = ["charraig"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
tomlkit = "^0.9.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry_core>=1.1.11"]
build-backend = "poetry.core.masonry.api"
