[tool.poetry]
name = "{{ cookiecutter.directory_name }}"
version = "0.1.0"
description = "{{ cookiecutter.description }}"
authors = []
readme = "{{ cookiecutter.readme }}"
license = "{{ cookiecutter.license }}"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.0"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
flake8 = "^4.0.1"
flake8-docstrings = "^1.5.0"
black = "^21.4b2"
isort = "^5.6.4"
notebook = "^6.0.3"
pdoc3 = "^0.10.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
