[tool.poetry]
name = "{{ cookiecutter.directory_name }}"
version = "0.1.0"
description = "{{ cookiecutter.description }}"
authors = []
readme = "{{ cookiecutter.readme }}"
license = "{{ cookiecutter.license }}"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
flake8 = "^7.0.0"
flake8-docstrings = "^1.5.0"
black = "^23.1"
isort = "^5.6.4"
notebook = "^7.0.4"
pdoc3 = "^0.10.0"

[build-system]
requires = ["poetry_core>=1.1.12"]
build-backend = "poetry.core.masonry.api"
