[tool.poetry]
name = "testproj"
version = "0.1.0"
description = "Quite simply, it saves the world."
authors = "['charraig']"
readme = "README.md"
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.3.5"
flake8 = "^3.7.9"
black = "^19.10b0"
isort = "^4.3.21"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
